--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </li>
         <li>
           <a href="https://api.whatsapp.com/send?phone=5511974731502&text=Ol%C3%A1!%20Gostaria%20de%20saber%20mais%20sobre%20a%20consulta%20com%20o%20Nutri.%20Alessandro%20Silva" 
-          target="_blank" > 📞 WhatsApp </a>
+          target="_blank" > 📞 Agende sua consulta </a>
         </li>
         <li>
           <a href="https://www.tiktok.com/@nutri.alessandrosilva" 
